# xhtml_parser

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  licenses.txt  toto.txt
performance-testing/: README.md  performance-results.xls
performance-testing/pugixml/: build.sh  main.cpp  run.sh
performance-testing/roxmltree/: Cargo.toml  run.sh
performance-testing/roxmltree/src/: main.rs
performance-testing/xhtml_parser/: Cargo.toml  run.sh
performance-testing/xhtml_parser/src/: main.rs
performance-testing/xml5ever/: Cargo.toml  run.sh
performance-testing/xml5ever/src/: main.rs
src/: attribute.rs  defs.rs  document.rs  lib.rs  node.rs  node_info.rs  node_type.rs  parser.rs
tests/: negative_tests.rs  tests_xml.rs
tests/test_data/keep_ws_only_pcdata/expected_result/: note.xhtml.result
tests/test_data/keep_ws_only_pcdata/test_case/: note.xhtml
tests/test_data/namespace_removal/test_case/: note.xhtml
tests/test_data/no_feature/expected_result/: note.xhtml.result
tests/test_data/no_feature/test_case/: note.xhtml
tests/test_data/parse_escapes/expected_result/: note.xhtml.result
tests/test_data/parse_escapes/test_case/: note.xhtml
tests/test_data/simple_test/expected_result/: 01 Simple 1.xhtml.result  02 Simple 2.xhtml.result  03 Simple 3.xhtml.result  06 Complete chapter.xhtml.result  08 large.xhtml.result  09 doctype.xhtml.result  10 dtd.xhtml.result  11 cdata.xhtml.result
tests/test_data/simple_test/test_case/: 02 Simple 2.xhtml  06 Complete chapter.xhtml  08 large.xhtml  09 doctype.xhtml  10 dtd.xhtml  11 cdata.xhtml
tests/test_data/speed_test/expected_result/: Complete chapter.xhtml.result  large.xhtml.result
tests/test_data/trim_pcdata/test_case/: note.xhtml
tests/test_support/: Cargo.toml
tests/test_support/src/: unit_test.rs
