[package]
name = "xhtml_parser"
version = "0.2.0"
authors = ["Guy Turcotte"]
description = "Non-validating XHTML Tree-based parser."
readme = "README.md"
repository = "https://github.com/turgu1/xhtml_parser"
keywords = ["xml", "xhtml", "parser", "dom", "epub"]
edition = "2021"
license = "MIT"

[dependencies]
kmp = "0.1.1"
log = "0.4.27"
memchr = "2.7.4"
phf = { version = "0.11", features = ["macros"] }

[features]
default = ["namespace_removal", "parse_escapes"]
namespace_removal = []
parse_escapes = []
keep_ws_only_pcdata = []
trim_pcdata = []

[dev-dependencies]
test_support = { path = "./tests/test_support" }

[badges]
travis-ci = { repository = "turgu1/xhtml_parser" }
