[package]
name = "xhtml_parser"
version = "0.2.9"
authors = ["Guy Turcotte"]
description = "Non-validating XHTML Tree-based parser."
readme = "README.md"
repository = "https://github.com/turgu1/xhtml_parser"
keywords = ["xml", "xhtml", "parser", "dom", "epub"]
edition = "2021"
license = "MIT"

[dependencies]
kmp = "0.1.1"
log = "0.4.27"
memchr = { version = "2.7.4", default-features = false }
phf = { version = "0.12", features = ["macros"] }

[features]
default = [
    "namespace_removal",
    "parse_escapes",
    "small_node_count",
    "small_attr_count",
    "medium_xml_size",
    "use_cstr",
]

all_features = [
    "namespace_removal",
    "parse_escapes",
    "keep_ws_only_pcdata",
    "trim_pcdata",
    "use_cstr",
    "forward_only",
]


namespace_removal = []
parse_escapes = []
keep_ws_only_pcdata = []
trim_pcdata = []
small_node_count = []
medium_node_count = []
large_attr_count = []
small_attr_count = []
medium_attr_count = []
large_node_count = []
small_xml_size = []
medium_xml_size = []
large_xml_size = []
use_cstr = []
forward_only = []

[dev-dependencies]
test_support = { path = "./tests/test_support" }
timelapse = "0.1.3"

[badges]
travis-ci = { repository = "turgu1/xhtml_parser" }

[profile.release]
opt-level = 3
codegen-units = 1
panic = "abort"
strip = true
debug = false
